--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -5,7 +5,7 @@
     <title>subjects</title>
     <!--<link id="theme-style" rel="stylesheet" href="/assets/subjectdark.css">-->
     <link rel="stylesheet" href="/assets/style.css">
-    <!--<script defer src="/assets/theme.js"></script>-->
+    <script defer src="/assets/theme.js"></script>
     <script src="/assets/subjectstest.js" defer></script>
 
 
@@ -14,7 +14,7 @@
 <header>
     <nav>
         <a href="google.com">Notenübersicht</a>
-        <a href="google.com">Lernplan</a>
+        <a href="/todo">Lernplan</a>
         <a href="/auth/login">Abmelden</a>
         <a href="google.com">Google</a>
 
