--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>ToDos</title>
     <link id="theme-style" rel="stylesheet" href="/assets/tododark.css">
+    <script defer src="/assets/theme.js"></script>
     <script src="/assets/todotest.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
-            <a href="subjects.ejs">back</a>
-            <a href="subjects.ejs">logout</a>
+            <a href="subjects">back</a>
+            <a href="/auth/login">logout</a>
             <div id="dark-mode-switch">
                 <label id="toggle-switch">
                     <input id="toggle" type="checkbox">
