views angepasst, also alle kommentare rausgelöscht

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -7,24 +7,7 @@
     <script defer src="/assets/theme.js"></script>
     <script src="/assets/todotest.js" defer></script>
 </head>
-<body><!--
-    <header>
-        <nav>
-            <a href="subjects">back</a>
-            <a href="/auth/login">logout</a>
-            <div id="dark-mode-switch">
-                <label id="toggle-switch">
-                    <input id="toggle" type="checkbox">
-                    <span id="slider">
-                    <div id="background"></div>
-                    <div id="star-1"></div>
-                    <div id="star-2"></div>
-                </span>
-                </label>
-            </div>
-        </nav>
-    </header>
--->
+<body>
     <header>
     <nav>
         <a href="subjects">Zurück zur Übersicht </a>
