--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -249,19 +249,19 @@ main .top-banner button:hover {
     padding:10px;
 }
 
-#pruefungs-container .line {
+.line {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
 }
 
-#pruefungs-container .line .left,
-#pruefungs-container .line .right {
+.line .left,
+.line .right {
   flex: 0; /* nur so breit wie Inhalt */
 }
 
-#pruefungs-container .line .lineElement{
+.line .lineElement{
     color:var(--text);
     background-color: transparent;
     border:none;
@@ -308,6 +308,18 @@ main .top-banner button:hover {
     border-radius: 8px;
     border: none;
     cursor: pointer;
+}
+
+#todoPopup {
+    display:none;
+    position:fixed;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    padding:20px;
+    background:white;
+    border:1px solid #ccc;
+    color:black
 }
 
 #todos-container {
