Name des Tabs auf ausgewähltes Fah geändert

--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>Angeklicktes Fach</title>
+    <title><%= subject.name %></title>
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
     <script defer src="/assets/pomodoro.js"></script>
