--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title><%= subject.name %></title>
+    <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
     <script defer src="/assets/pomodoro.js"></script>
