--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
+    <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
 </head>
