--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>ToDos</title>
+    <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
     <script src="/assets/todotest.js" defer></script>
