--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
+    <script defer src="/assets/password-toggle.js"></script>
 </head>
 <body style="align-items:center">
 
@@ -42,6 +43,8 @@
             Konto temporär gesperrt aufgrund zu vieler fehlgeschlagener Anmeldeversuche.
         <% } else if (error === 'inactive') { %>
             Das Konto ist deaktiviert.
+        <% } else if (error === 'ratelimit') { %>
+            Zu viele Login-Versuche. Bitte warten Sie eine Minute und versuchen Sie es erneut.
         <% } else { %>
             Ein Fehler ist aufgetreten.
         <% } %>
@@ -69,7 +72,10 @@
         <input id="username" name="username" type="text" required autofocus>
 
         <label for="password">Passwort</label>
-        <input id="password" name="password" type="password" required>
+        <div class="password-field">
+            <input id="password" name="password" type="password" required>
+            <button type="button" class="password-toggle" data-password-toggle="password" aria-label="Passwort anzeigen">Anzeigen</button>
+        </div>
 
         <button type="submit">Anmelden</button>
     </form>
