--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,7 @@
     <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
+    <script defer src="/assets/password-toggle.js"></script>
 </head>
 <body>
 
@@ -36,6 +37,8 @@
             Alle Pflichtfelder sind erforderlich.
         <% } else if (error === 'mismatch') { %>
             Die Passwörter stimmen nicht überein.
+        <% } else if (error === 'password') { %>
+            Passwort zu schwach. Mindestens 8 Zeichen sowie Großbuchstaben, Kleinbuchstaben, Zahl und Sonderzeichen sind erforderlich.
         <% } else if (error === 'exists') { %>
             Dieser Benutzername ist bereits vergeben.
         <% } else if (error === 'session') { %>
@@ -77,10 +80,18 @@
         <input id="username" name="username" type="text" required>
 
         <label for="passwordone">Passwort *</label>
-        <input id="passwordone" name="passwordone" type="password" required>
+        <div class="password-field">
+            <input id="passwordone" name="passwordone" type="password" minlength="8" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}" title="Mindestens 8 Zeichen mit Großbuchstabe, Kleinbuchstabe, Zahl und Sonderzeichen" required>
+            <button type="button" class="password-toggle" data-password-toggle="passwordone" aria-label="Passwort anzeigen">Anzeigen</button>
+        </div>
 
         <label for="passwordtwo">Passwort bestätigen *</label>
-        <input id="passwordtwo" name="passwordtwo" type="password" required>
+        <div class="password-field">
+            <input id="passwordtwo" name="passwordtwo" type="password" minlength="8" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_]).{8,}" title="Mindestens 8 Zeichen mit Großbuchstabe, Kleinbuchstabe, Zahl und Sonderzeichen" required>
+            <button type="button" class="password-toggle" data-password-toggle="passwordtwo" aria-label="Passwort anzeigen">Anzeigen</button>
+        </div>
+
+        <p>Passwortregeln: mindestens 8 Zeichen, 1 Großbuchstabe, 1 Kleinbuchstabe, 1 Zahl und 1 Sonderzeichen.</p>
 
         <button type="submit">Registrieren</button>
     </form>
