grades.ejs hinzugefügt und entsprechende Zeile in app.js hinzugefügt. Auch schon Navigation in subjects.ejs abgeändert

--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -13,7 +13,7 @@
 <body>
 <header>
     <nav>
-        <a href="google.com">Notenübersicht</a>
+        <a href="/grades">Notenübersicht</a>
         <a href="/todo">Lernplan</a>
         <a href="/auth/login">Abmelden</a>
 
