grades.js hinzugefügt. Mit entsprechender html Struktur

--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -2,11 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
-    <title>subjects</title>
+    <title>grades</title>
     <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
     <script defer src="/assets/theme.js"></script>
-    <script src="/assets/subjects.js" defer></script>
+    <script src="/assets/grades.js" defer></script>
 
 
 </head>
@@ -28,6 +28,13 @@
     </nav>
 </header>
 <main>
+    <div id="list-box">
+        <div id="grade-list">
+        </div>
+    </div>
+    <div id="graph-box">
+        <div id="graph"></div>
+    </div>
 </main>
 </body>
 </html>
