footer, impressum datenschutz

--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -36,5 +36,11 @@
         <div id="graph"></div>
     </div>
 </main>
+
+<footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
+</footer>
 </body>
 </html>
