--- a/views/login.ejs
+++ b/views/login.ejs
@@ -82,5 +82,11 @@
     </form>
 </div>
 
+<footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
+</footer>
+
 </body>
 </html>
