--- a/views/timer.ejs
+++ b/views/timer.ejs
@@ -38,7 +38,9 @@
         </div>
     </section>
 <footer>
-
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
 </footer>
 </body>
 </html>
