--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -30,16 +30,22 @@
         <h1>Todos</h1>
         <div id="todo-block">
         </div>
-    </main>
-    <footer id="todofooter">
-        <div class="tl-row">
-            <div class="tl-line">
-                <div class="tl-now" title="Jetzt"></div>
-                <div id="tl-markers"></div>
+        <div id="todofooter">
+            <div class="tl-row">
+                <div class="tl-line">
+                    <div class="tl-now" title="Jetzt"></div>
+                    <div id="tl-markers"></div>
+                </div>
+                <div id="time-span"></div>
             </div>
-            <div id="time-span"></div>
         </div>
-    </footer>
+    </main>
 
+    
+<footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
+</footer>
 </body>
 </html>
