--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -662,7 +662,7 @@ main .top-banner button:hover {
     position: fixed;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 7%;
     height: 56px;
     display: flex;
     align-items: center;
@@ -761,6 +761,28 @@ main .top-banner button:hover {
 /* FOOTER */
 footer {
     background-color: var(--bg);
+    border-top: 1px solid var(--border);
+    height: 5%;
+    min-height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.impressum, .datenschutz{
+    flex:1;
+    display:flex;
+    flex-direction:column;
+    align-items:flex-start;
+    justify-content:center;
+    padding: 20px;
+    box-sizing:border-box;
+}
+
+.maxWidthAddon{
+    max-width: 800px;
+    margin: auto;
 }
 
 /* OPTIONAL: bessere Darstellung auf kleinen Screens */
