--- a/views/about.ejs
+++ b/views/about.ejs
@@ -34,5 +34,10 @@
     <img src="/img/learn.jpg" alt="Bild zur Illustration von Lernen">
 </main>
 
+<footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
+</footer>
 </body>
 </html>
