--- a/views/register.ejs
+++ b/views/register.ejs
@@ -97,6 +97,10 @@
         <button type="submit">Registrieren</button>
     </form>
 </div>
-
+<footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
+</footer>
 </body>
 </html>
