--- a/views/subject.ejs
+++ b/views/subject.ejs
@@ -149,6 +149,9 @@
 
 
 <footer>
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
 </footer>
 </body>
 </html>
