--- a/views/subjects.ejs
+++ b/views/subjects.ejs
@@ -48,7 +48,9 @@
     </div>
 </main>
 <footer>
-
+    <p>© 2026 Lernhilfe - Studienprojekt der DHBW Ravensburg</p>
+    <a href="/impressum">Impressum</a>
+    <a href="/datenschutz">Datenschutzerklärung</a>
 </footer>
 </body>
 </html>
