--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -29,14 +29,17 @@
     <main>
         <h1>Todos</h1>
         <div id="todo-block">
+        <!-- Hier werden die sachen eingefügt-->
         </div>
-        <div id="todofooter">
+        
+        <div id="timeline">
             <div class="tl-row">
+                <div id="time-span"></div>
                 <div class="tl-line">
                     <div class="tl-now" title="Jetzt"></div>
                     <div id="tl-markers"></div>
                 </div>
-                <div id="time-span"></div>
+                <div id="time-span-end"></div>
             </div>
         </div>
     </main>
