--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="utf-8">
+    <meta name="csrf-token" content="<%= csrfToken %>">
     <title>grades</title>
     <link rel="icon" type="image/png" href="/favicon/study_icon.png">
     <link rel="stylesheet" href="/assets/style.css">
