--- a/views/grades.ejs
+++ b/views/grades.ejs
@@ -16,6 +16,7 @@
     <nav>
         <a href="/todo">Lernplan</a>
         <a href="/subjects">Zurück zur Übersicht</a>
+        <a href="/auth/login">Abmelden</a>
 
         <label class="theme-toggle">
             <input type="checkbox" id="toggle">
