--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -11,6 +11,7 @@
 <body>
     <header>
     <nav>
+        <a href="/grades">Notenübersicht</a>
         <a href="subjects">Zurück zur Übersicht </a>
         <a href="/auth/login">Abmelden</a>
 
